first draft conclusion

--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -145,6 +145,8 @@ we validate its performance on 3DObject dataset and PASCAL 2012 dataset.
 \input{experiments}
 
 \section{Conclusion}
+\label{conclusion}
+\input{conclusion}
 
 \clearpage
 \clearpage
