--- a/experiments.tex
+++ b/experiments.tex
@@ -464,7 +464,7 @@ model (magenta bounding boxes enclose the output of our system).
   \includegraphics[width=0.45\linewidth]{car_pascal/3.png} &   
   \includegraphics[width=0.45\linewidth]{car_pascal/4.png} \\   
 \end{tabular}
-\caption{Robustness of our method for against irregular and truncated
+\caption{Robustness of our method against irregular and truncated
   R-CNN detection proposals (cyan).}
   % \cite{Girshick14}. Blue box is the R-CNN detection that is feed into
   % the system as initial detection. Purple box and overlaid rendering
