--- a/related.tex
+++ b/related.tex
@@ -27,7 +27,7 @@ renderings of CAD models to learn discriminative mid-level patches.
 \cite{Lim14} present a method for learning the relative discriminativeness of
 the patches.
 
-\textcolor{red}{Again, should we highlight the differences between these methods and ours?}
+% \textcolor{red}{Again, should we highlight the differences between these methods and ours?}
 
 % specialized in giving such accurate information, can be applied on any generic
 % object detectors to give high quality metadata.  Many Since the WHO does not
