--- a/egbib.bib
+++ b/egbib.bib
@@ -406,4 +406,13 @@ language={English}
  title = {Discriminative mixture-of-templates for viewpoint classification},
  booktitle = {ECCV'10},
 @year = 2010
+}
+
+@techreport{Shewchuk94,
+ author = {Shewchuk, Jonathan R},
+ title = {An Introduction to the Conjugate Gradient Method Without the Agonizing Pain},
+ year = {1994},
+ source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Acmucs%3ACMU%2F%2FCS-94-125},
+ publisher = {Carnegie Mellon University},
+ address = {Pittsburgh, PA, USA},
 } 
