--- a/approach.tex
+++ b/approach.tex
@@ -180,7 +180,7 @@ decomposition with Gaussian Elemination, which requires $O(n^3)$ time \scream{Ci
 
 The Conjugate Gradient method is an iterative algorithm for solving symmetric
 positive definite systems which runs in $O(n^2\kappa)$ time, where $\kappa$ is
-the condition number of the matrix. \scream{Citation for complexity}.
+the condition number of the matrix. \cite{Shewchuk94}.
 %
 This makes Conjugate Gradient faster than decomposition for matrices with small condition
 numbers relative to their size.
