intro spell check

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -4,4 +4,6 @@ WHO features called NZ-WHO. As it circumvents the need for
 calibration, it is computationally efficient, allowing it to be run in
 an on-the-fly setting. As a result, we can use our method to enrich
 existing object class detections with additional information such as
-precise 3D pose and 3D CAD model exemplar.
+precise 3D pose and 3D CAD model exemplar. In combination with a
+recent R-CNN object class detector, we achieve state-of-the-art
+results in joint detection and viewpoint estimation.
