--- a/approach.tex
+++ b/approach.tex
@@ -25,7 +25,7 @@ in Fig. \ref{fig:rendering}.
      \includegraphics[width=0.4\linewidth]{rendering}
      \includegraphics[width=0.4\linewidth]{depth}
   \end{center}
-  \caption{An example rendering and depth image made by our renderer}
+  \caption{An example rendering and depth image from renderer.}
   \label{fig:rendering}
 \end{figure}
 
