--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -79,7 +79,7 @@ efficiently search for candidate detections by computing FFT-based template
 convolutions. Due to the speed of our template synthesis procedure, we are able
 to perform joint optimization on continuous scale, translation, rotation, and
 focal length. We provide an efficient GPU implementation of our algorithm, and
-we validate its performance on 3DObject dataset and PASCAL 2012 dataset.
+we validate its performance on 3D Object Classes and PASCAL3D+ datasets.
 
 %     Using 3D model to detect and register the model to RGB image has been a
 %     growing field of study. Recently, Aubry \etal \cite{Aubry14} and J. Lim
