teaser fig caption

--- a/intro.tex
+++ b/intro.tex
@@ -18,7 +18,14 @@
   %  %   \end{tabular}
   % \end{tabular}\\
   % (b)
-  \caption{Using a bank of CAD models, we generate NZ-WHO templates which can be used to either detect objects directly or initialize pose of an object in the bounding box from other detectors. Once initialization is given, we use NZ-WHO to propose and validate plausible pose on-the-fly and further tune the translation, 3D viewpoint and focal length continuously.}
+  \caption{Using a database of 3D CAD models, we generate NZ-WHO
+    templates which can be used to either detect objects directly or
+    enrich the output of an existing detector with high-quality,
+    continuous pose and 3D CAD model exemplar.}
+    % initialize pose of an object in the bounding box from other
+    % detectors. Once initialization is given, we use NZ-WHO to propose
+    % and validate plausible pose on-the-fly and
+    % further tune the translation, 3D viewpoint and focal length continuously.}
   % \vspace{-1em}
   \label{fig:front}
 \end{figure}
