--- a/approach.tex
+++ b/approach.tex
@@ -176,7 +176,7 @@ feature vector $x'$ means a solving the system of linear equations, $\Sigma' w' 
 \mu')$. In
 \cite{Hariharan12}, the authors make use of the fact that covariance matrices
 are symmetric and positive semidefinite to solve the system via the Cholesky
-decomposition with Gaussian Elemination, which requires $O(n^3)$ time \scream{Citation for complexity}.
+decomposition with Gaussian Elemination, which requires $O(n^3)$ time.
 
 The Conjugate Gradient method is an iterative algorithm for solving symmetric
 positive definite systems which runs in $O(n^2\kappa)$ time, where $\kappa$ is
