teaser fig caption

--- a/approach.tex
+++ b/approach.tex
@@ -222,7 +222,11 @@ the residual of NZ-WHO is smaller than WHO Fig.~\ref{fig:whoresidual}.
      (a) & (b) \\
  \end{tabular}
   \end{center}
-  \caption{(a) Realtime analysis of whitening. HOG means feature extraction time, WHO-Chol uses method of \cite{Hariharan12} and WHO-CG uses iterative Conjugate Gradient, and NZ-WHO-CG uses only non-zero cells and use Conjugate Gradient. (b) final speed of using NZ-WHO compare to WHO}
+  \caption{(a) Runtime analysis of whitening. HOG means feature
+    extraction time, WHO-Chol uses ~\cite{Hariharan12} and
+    WHO-CG uses iterative Conjugate Gradient. NZ-WHO-CG uses only
+    non-zero cells and Conjugate Gradient. (b) final speedup
+    of NZ-WHO vs. WHO.}
   \label{fig:whotime}
 \end{figure}
 %
