--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -35,7 +35,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{Enriching Object Detection with 2D-3D Registration and Continuous Viewpoint}
+\title{Enriching Object Detection with 2D-3D Registration and Continuous Viewpoint Estimation}
 %\title{Enrich Object Detection : 2D-3D registration and continuous viewpoint estimation}
 
 \author{First Author\\
