--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,9 +1,9 @@
-In this paper, we have proposed a method for generating 3D CAD model
-exemplar detector templates on-the-fly, based on a novel variant of
-WHO features called NZ-WHO. As it circumvents the need for
-calibration, it is computationally efficient, allowing it to be run in
+We have proposed a method for generating 3D CAD model
+exemplar templates on-the-fly, based on a novel variant of
+WHO features (NZ-WHO). It circumvents the need for
+calibration, is computationally efficient, and allows it to be run in
 an on-the-fly setting. As a result, we can use our method to enrich
-existing object class detections with additional information such as
-precise 3D pose and 3D CAD model exemplar. In combination with a
-recent R-CNN object class detector, we achieve state-of-the-art
-results in joint detection and viewpoint estimation.
+existing object detections with additional information such as
+precise 3D pose and 3D CAD model exemplar. Combined with an R-CNN
+detector, we achieve state-of-the-art
+results in joint detection and VP estimation.
