--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -146,6 +146,7 @@ we validate its performance on 3D Object Classes and PASCAL3D+ datasets.
 
 \section{Conclusion}
 \label{conclusion}
+\vspace{-.2cm}
 \input{conclusion}
 
 \clearpage
