--- a/experiments.tex
+++ b/experiments.tex
@@ -148,7 +148,7 @@ set of $8$ discrete viewpoint classes.
 Tab.~\ref{tab:3dobject} gives the corresponding results, comparing our
 method to two recent state-of-the-art baselines, the aspect layout
 model (ALM~\cite{Xiang12}), and the
-DPM-VOC+VP~\cite{Pepik12}. Fig.~\ref{fig:3dobject} gives corresponding
+DPM-VOC+VP~\cite{Pepik12}. Fig.~\ref{fig:3dobject} gives
 qualitative results.
 
 We observe that our model performs on par with the state-of-the-art
