--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -23,7 +23,7 @@
 \graphicspath{ {figures/} }
 % \cvprfinalcopy % *** Uncomment this line for the final submission
 
-\def\cvprPaperID{****} % *** Enter the CVPR Paper ID here
+\def\cvprPaperID{2349} % *** Enter the CVPR Paper ID here
 \def\httilde{\mbox{\tt\raisebox{-.5ex}{\symbol{126}}}}
 
 % custom commands
