--- a/experiments.tex
+++ b/experiments.tex
@@ -265,7 +265,7 @@ roll), CAD instance (model index, rendering, depth) and focal length.
 %   (d) & (e) & (f)\\
    \end{tabular}
  \end{center}
- \caption{Effect of fine tuning. (left) original image, (middle) initial detection, (right) continuous fine tuning}
+ \caption{Effect of fine tuning. (left) original image, (middle) initial detection, (right) continuous fine tuning using Single-Component Metropolis Hastings}
  \label{fig:tuning}
 \end{figure}
 
@@ -420,7 +420,7 @@ bicycle-24v         & 44.4 / 14.3         & 45.9 / 16.7             & 48.1 / 21.
   \includegraphics[width=0.49\linewidth]{car_cnn24_crop.png} \\   
 %  \hline
 \end{tabular}
-\caption{Average Precision (AP) and Average Viewpoint Precision (AVP)
+\caption{Average Precision (AP)(red) and Average Viewpoint Precision (AVP)(green)
   and viewpoint confusion table on PASCAL 12 car validation set using
   R-CNN + Ours (full). From the top left, 4 views, 8 views, 16 views
   and 24 views.}
