typo and capion4

--- a/approach.tex
+++ b/approach.tex
@@ -242,7 +242,7 @@ the residual of NZ-WHO is smaller than WHO Fig.~\ref{fig:whoresidual}.
   \end{center}
   \caption{(a) Runtime analysis of whitening. HOG means feature
     extraction time, WHO-Chol uses ~\cite{Hariharan12} and
-    WHO-CG uses iterative Conjugate Gradient. NZ-WHO-CG uses only
+    WHO-CG uses iterative Conjugate Gradient. NZ-WHO-CG (Ours) uses only
     non-zero cells and Conjugate Gradient. (b) final speedup
     of NZ-WHO vs. WHO.}
   \label{fig:whotime}
