--- a/intro.tex
+++ b/intro.tex
@@ -119,7 +119,7 @@ In this paper, we propose a novel method for 2D-3D alignment of
 exemplar CAD models to real-world images that circumvents the need for
 calibration, and greatly enhances the scalability of WHO. As a
 result, we can render novel views and train corresponding exemplar
-models {\em on the fly}, without the need for offline processing and we call thses NZ-WHO templates \ref{fig:front}. As a
+models {\em on the fly}, without the need for offline processing and we call these NZ-WHO templates \ref{fig:front}. As a
 by-product, we can formulate the alignment problem as a parameter
 search in a continuous pose space, consisting of yaw, pitch and roll, resulting in truly continuous pose estimates, which
 we implement using MCMC sampling.
